compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_tuple_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }"
---
----- SOURCE CODE
case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:29
  │
1 │ case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }
  │                             ^^^^^^^^^

Expected type:

    #(Int, Int, Int)

Found type:

    #(Int, Float)

error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:1:1
  │
1 │ case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
